--- a/Views/Equipe/Index.cshtml
+++ b/Views/Equipe/Index.cshtml
@@ -6,8 +6,20 @@
 
 <h1>TELA DE EQUIPES</h1>
 
-<table>
-    <thead>
+<form method="post" action='@Url.Action("Cadastrar")'  enctype="multipart/form-data">
+
+    <label for="">Nome</label>
+    <input type="text" name="Nome">
+
+    <label for="">Imagem</label>
+    <input type="file" name="Imagem">
+
+    <button type="submit">Cadastrar</button>
+
+</form>
+
+<table class = "table table-striped table-responsive">
+    <thead class = "table table-striped table-responsive">
         <th>Id</th>
         <th>Nome</th>
         <th>Imagem</th>
@@ -18,9 +30,8 @@
         <tr>
             <td>@equipe.IdEquipe</td>
             <td>@equipe.Nome</td>
-            <td>@equipe.Imagem</td>
+            <td>@equipe.Imagem.</td>
         </tr>
         }
     </tbody>
-
 </table>
