--- a/Views/Equipe/Index.cshtml
+++ b/Views/Equipe/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h1>TELA DE EQUIPES</h1>
-
+@* todo TELA DE CADASTRO *@
 <form method="post" action='@Url.Action("Cadastrar")' enctype="multipart/form-data">
 
     <label for="">Nome</label>
@@ -18,6 +18,7 @@
 
 </form>
 
+@* TELA DE LISTAGEM *@
 <table class="table table-striped table-responsive">
     <thead class="table table-striped table-responsive">
         <th>Id</th>
