--- a/Views/Jogador/Index.cshtml
+++ b/Views/Jogador/Index.cshtml
@@ -5,19 +5,51 @@
 }
 
 <h1>Tela de Jogadores</h1>
+@* TODO TELA DE CADASTRO *@
+<form method="post" action='@Url.Action("Cadastrar")' enctype="multipart/form-data">
+    <div class="form-row align-items-center">
+        @* <div class="col-auto my-1">
+            <label class="mr-sm-2" for="inlineFormCustomSelect">Selecione uma Equipe</label>
+            <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
+                <option selected hidden>Clique para escolher</option>
+                <option value="1">One</option>
+                <option value="2">Two</option>
+                <option value="3">Three</option>
+            </select>
+        </div> *@
 
-<form method="post" action="">
-    <label for="">Nome</label>
-    <input type="text" name="Nome" required>
+        <label for="">Selecione uma Equipe</label>
+        <input type="text" name="Equipe" required>
 
-    <label for="">Selecione uma Equipe</label>
-    <input type="text" name="Equipe" required>
+        <label for="">Nome</label>
+        <input type="text" name="Nome" required>
 
-    <label for="">Email</label>
-    <input type="email">
+        <label for="">Email</label>
+        <input type="email" name="Email">
 
-    <label for="">Senha</label>
-    <input type="password" name="Senha" required>
+        <label for="">Senha</label>
+        <input type="password" name="Senha" required>
 
-    <button type="submit">Cadastrar</button>
+        <button type="submit">Cadastrar</button>
 </form>
+
+@* TELA DE LISTAGEM *@
+<table class="table table-striped table-responsive">
+    <thead class="table table-striped table-responsive">
+        <th>Nome da Equipe</th>
+        <th>Imagem da Equipe</th>
+        <th>Nome do Jogador</th>
+        <th>Email do Jogador</th>
+    </thead>
+    <tbody>
+        @foreach (Jogador jogador in ViewBag.Jogador)
+        {
+            <tr>
+                <td>@jogador.Equipe.Nome</td>
+                <td>Imagem estará aqui</td>
+                <td>@jogador.NomeJogador</td>
+                <td>@jogador.Email</td>
+            </tr>
+        }
+    </tbody>
+</table>
