--- a/Views/Jogador/Index.cshtml
+++ b/Views/Jogador/Index.cshtml
@@ -8,18 +8,19 @@
 @* TODO TELA DE CADASTRO *@
 <form method="post" action='@Url.Action("Cadastrar")' enctype="multipart/form-data">
     <div class="form-row align-items-center">
-        @* <div class="col-auto my-1">
-            <label class="mr-sm-2" for="inlineFormCustomSelect">Selecione uma Equipe</label>
-            <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
-                <option selected hidden>Clique para escolher</option>
-                <option value="1">One</option>
-                <option value="2">Two</option>
-                <option value="3">Three</option>
-            </select>
-        </div> *@
+
 
         <label for="">Selecione uma Equipe</label>
-        <input type="text" name="Equipe" required>
+        <div class="col-auto my-1">
+            <label class="mr-sm-2" for="inlineFormCustomSelect">Selecione uma Equipe</label>
+            <select name="IdEquipe" class="custom-select mr-sm-2" id="inlineFormCustomSelect">
+                <option value="0" selected hidden>Clique para escolher</option>
+                @foreach (Equipe equipe in ViewBag.Equipe)
+                {
+                    <option value="@equipe.IdEquipe">@equipe.Nome</option>
+                }
+            </select>
+        </div>
 
         <label for="">Nome</label>
         <input type="text" name="Nome" required>
@@ -36,19 +37,28 @@
 @* TELA DE LISTAGEM *@
 <table class="table table-striped table-responsive">
     <thead class="table table-striped table-responsive">
+        <th>Id do Jogador</th>
         <th>Nome da Equipe</th>
         <th>Imagem da Equipe</th>
         <th>Nome do Jogador</th>
         <th>Email do Jogador</th>
+        <th>Ações</th>
     </thead>
     <tbody>
         @foreach (Jogador jogador in ViewBag.Jogador)
         {
             <tr>
+                <td>@jogador.IdJogador</td>
                 <td>@jogador.Equipe.Nome</td>
-                <td>Imagem estará aqui</td>
+                <td><img src="/img/Equipes/@jogador.Equipe.Imagem" alt="" width="50px"></td>
                 <td>@jogador.NomeJogador</td>
                 <td>@jogador.Email</td>
+
+                <td>
+                    <a asp-area="" asp-controller="Jogador" asp-action="Excluir"
+                        asp-route-id="@jogador.IdJogador">Excluir</a>
+                    <a asp-area="" asp-controller="Jogador" asp-action="Editar" asp-route-id="@jogador.IdJogador">Editar</a>
+                </td>
             </tr>
         }
     </tbody>
