--- a/Views/Jogador/Edit.cshtml
+++ b/Views/Jogador/Edit.cshtml
@@ -1,4 +1,4 @@
-@model Jogador
+@model Jogador 
 
 @{
     ViewData["Title"] = "Edit";
@@ -12,10 +12,16 @@
     <input type="hidden" name="IdJogador" value="@ViewBag.Equipe.IdEquipe">
 
     <label for="">Nome</label>
-    <input placeholder="Digite o nome a ser alterado" type="text" name="Nome" value="@ViewBag.Equipe.Nome" required>
+    <input type="text" name="Nome" value="@ViewBag.Jogador.Nome" required>
 
-    <label for="">Imagem</label>
-    <input type="file" name="Imagem" value="@ViewBag.Equipe.Imagem">
+    <label for="">E-mail</label>
+    <input type="email" name="Email" value="@ViewBag.Jogador.Email">
+
+    <label for="">Senha</label>
+    <input type="password" name="Senha" value="@ViewBag.Jogador.Senha">
+
+    <label for="">Equipe</label>
+    <input type="text" name="Equipe" value="@ViewBag.Jogador.Equipe.Nome">
 
     <button type="submit">Atualizar</button>
 </form>
