--- a/Views/Jogador/Edit.cshtml
+++ b/Views/Jogador/Edit.cshtml
@@ -10,9 +10,10 @@
 <form method="post" action='@Url.Action("Atualizar")' enctype="multipart/form-data">
     @* O input abaixo está escondido através do type'hidden'  *@
     <input type="hidden" name="IdJogador" value="@ViewBag.Jogador.IdJogador">
+    <input type="hidden" name="IdEquipe" value="@ViewBag.Jogador.IdEquipe">
 
     <label for="">Nome</label>
-    <input type="text" name="Nome" value="@ViewBag.Jogador.Nome" required>
+    <input type="text" name="Nome" value="@ViewBag.Jogador.NomeJogador" required>
 
     <label for="">E-mail</label>
     <input type="email" name="Email" value="@ViewBag.Jogador.Email">
@@ -20,8 +21,23 @@
     <label for="">Senha</label>
     <input type="password" name="Senha" value="@ViewBag.Jogador.Senha">
 
-    <label for="">Equipe</label>
-    <input type="text" name="Equipe" value="@ViewBag.Jogador.Equipe.Nome">
+        <label for="">Equipe</label>
+    <select name="IdEquipe" id="IdEquipe">
+        <option value="0">Selecione uma opção: </option>
+        @foreach (Equipe equipe in ViewBag.Equipe)
+        {
+            @if (equipe.IdEquipe == @ViewBag.Jogador.IdEquipe)
+            {
+                @*selected = aqui que ele mostra o campo preenchido*@
+                <option value="equipe.IdEquipe" selected>@equipe.Nome</option>
+            }
+            
+            else
+            {
+                <option value="@equipe.IdEquipe">@equipe.Nome</option>
+            }
+        }
+    </select>
 
     <button type="submit">Atualizar</button>
 </form>
