--- a/Views/Equipe/Index.cshtml
+++ b/Views/Equipe/Index.cshtml
@@ -1,49 +1,80 @@
+<link rel="stylesheet" href="~/css/equipes.css">
 @model Equipe
 
 @{
     ViewData["Title"] = "Equipe";
 }
 
-<h1>TELA DE EQUIPES</h1>
-@* todo TELA DE CADASTRO *@
-<form method="post" action='@Url.Action("Cadastrar")' enctype="multipart/form-data">
+@if (ViewBag.Username == null)
+{
+    <a asp-area="" asp-controller="Login" asp-action="Index"></a>
 
-    <label for="">Nome</label>
-    <input type="text" name="Nome" required>
+}
+else
+{
 
-    <label for="">Imagem</label>
-    <input type="file" name="Imagem">
+<!-- MAIN -->
+<main>
 
-    <button type="submit">Cadastrar</button>
+    <section class="container-grid cadastro-equipes">
 
-</form>
 
-@* TELA DE LISTAGEM *@
-<table class="table table-striped table-responsive">
-    <thead class="table table-striped table-responsive">
-        <th>Id</th>
-        <th>Nome</th>
-        <th>Imagem</th>
-        <th>Ações</th>
-    </thead>
-    <tbody>
-        @foreach (Equipe equipe in ViewBag.Equipe)
-        {
-            <tr>
-                <td>@equipe.IdEquipe</td>
-                <td>@equipe.Nome</td>
-                <td>
-                    <img src="/img/Equipes/@equipe.Imagem" alt="Imagem da equipe @equipe.Nome" width="70px">
-                </td>
-                <td> @* asp-controller = Definindo qual classe do controller será usada  *@
-                    @* asp-action = Qual método será utilizado dentro da classe *@
-                    @* asp-route-id = Definindo que o id do hyperlink será o mesmo id da equipe semelhante a da coluna *@
-                    <a asp-area="" asp-controller="Equipe" asp-action="Excluir" asp-route-id="@equipe.IdEquipe">Excluir</a>
-                </td>
-                <td>
-                    <a asp-area="" asp-controller="Equipe"  asp-action="Editar" asp-route-id="@equipe.IdEquipe">Editar</a>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table> 
+        <form class="frm-cad-equipe" method="post" action='@Url.Action("Cadastrar")' enctype="multipart/form-data">
+            <div class="cadequipe-titulo">
+                <h1>Cadastro de Equipes</h1>
+                <hr>
+            </div>
+
+            <input class="campo-entrada" type="text" placeholder="Digite o nome da sua equipe:" name="Nome" required>
+            <label class="foto" for="foto-file">
+                <input type="file" id="foto-file" name="Imagem">
+            </label>
+
+            <button type="submit">Cadastrar</button>
+
+
+
+            <!-- <select class="equipeid" id="equipeid">
+                    <option value="">Selecione uma Equipe</option>
+                    <option value="x">Equipe X</option>
+                    <option value="y">Equipe Y</option>
+                </select> -->
+        </form>
+
+        <!-- TABELA CADASTRO DE EQUIPES -->
+
+        <table>
+            <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>Nome</th>
+                    <th>Foto</th>
+                    <th>&spades;</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (Equipe equipe in ViewBag.Equipe)
+                {
+                    <tr>
+                        <td>@equipe.IdEquipe</td>
+                        <td>@equipe.Nome</td>
+                        <td><img src="/img/Equipes/@equipe.Imagem" alt="Imagem da equipe @equipe.Nome" class="green-play">
+                        </td>
+                        <td>@* asp-controller = Definindo qual classe do controller será usada *@
+                            @* asp-action = Qual método será utilizado dentro da classe *@
+                            @* asp-route-id = Definindo que o id do hyperlink será o mesmo id da equipe semelhante a da
+                        coluna *@
+                            <a asp-area="" asp-controller="Equipe" asp-action="Excluir" asp-route-id="@equipe.IdEquipe"><img
+                                    class="yellow-trash" src="~/assets/trash.png" alt=""></a>
+                        </td>
+                        <td>
+                            <a asp-area="" asp-controller="Equipe" asp-action="Editar"
+                                asp-route-id="@equipe.IdEquipe">Editar</a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </section>
+</main>
+}
