--- a/wwwroot/css/equipes.css
+++ b/wwwroot/css/equipes.css
@@ -163,10 +163,16 @@ main .cadastro-equipes tbody {
     width: 100%;
 }
 
+main .cadastro-equipes tbody{
+    overflow-y: scroll;
+    max-height: 500px;
+}
+
 /* linha do cabeçalho da tabela */
 main .cadastro-equipes thead tr {
     margin-bottom: 30px;
     border-bottom: 3px solid #F9AA01;
+    
 }
 
 /* linha do cabeçalho */
@@ -191,7 +197,7 @@ main .cadastro-equipes table tr {
 }
 
 main .cadastro-equipes table tbody tr {
-    height: 70px;
+    min-height: 70px;
     margin-bottom: 20px;
     /* efeito da borda e do fundo glass */
     border: 2px solid transparent;
@@ -217,6 +223,9 @@ main .cadastro-equipes table td {
 
 main .cadastro-equipes table td:last-of-type {
     border: none;
+
+    display: flex;
+    gap: 25px;
 }
 
 main .cadastro-equipes table td img.green-play {
