--- a/Views/Equipe/Edit.cshtml
+++ b/Views/Equipe/Edit.cshtml
@@ -1,21 +1,32 @@
-@model Equipe 
+<link rel="stylesheet" href="~/css/equipes.css">
+@model Equipe
 
 @{
     ViewData["Title"] = "Edit";
-    
+
 }
+<main style="height: 705px;">
+    <section class="container-grid cadastro-equipes">
 
-<h1>Edição de Equipe</h1>
+        <form class="frm-cad-equipe" method="post" enctype="multipart/form-data" action="@Url.Action("Atualizar")">
+            <div class="cadequipe-titulo">
+                <h1>Edição de Equipe</h1>
+                <hr>
+            </div>
+            @* O input abaixo está escondido através do type'hidden' *@
+            <input type="hidden" name="IdEquipe" value="@ViewBag.Equipe.IdEquipe">
 
-<form method="post" action='@Url.Action("Atualizar")' enctype="multipart/form-data">
-    @* O input abaixo está escondido através do type'hidden'  *@
-    <input type="hidden" name="IdEquipe" value="@ViewBag.Equipe.IdEquipe">
+            <label for="">Nome</label>
+            <input class="campo-entrada" placeholder="Digite o nome a ser alterado" type="text" name="Nome"
+                value="@ViewBag.Equipe.Nome" required>
 
-    <label for="">Nome</label>
-    <input placeholder="Digite o nome a ser alterado" type="text" name="Nome" value="@ViewBag.Equipe.Nome" required>
+            <label class="foto">
+                Imagem
+                <input type="file" name="Imagem" id="foto-file" value="@ViewBag.Equipe.Imagem">
+            </label>
 
-    <label for="">Imagem</label>
-    <input type="file" name="Imagem" value="@ViewBag.Equipe.Imagem">
+            <button type="submit">Atualizar</button>
+        </form>
 
-    <button type="submit">Atualizar</button>
-</form>
+    </section>
+</main>
