--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
 <body>
 
     <!-- HEADER -->
-    <header class="header">
+    <header class="header" id="header">
         <div class="header-top">
             <div class="container-grid header-top-flex">
                 <div>
@@ -175,8 +175,10 @@
         <div id="copyright">
             &#169;Copyright2022-GamerJogosDigitais
         </div>
-
+        <a href="#header">
         <img src="~/assets/Botao_voltar_ao_topo.svg" id="back-to-top" alt="Voltar ao Topo">
+            
+        </a>
     </footer>
 
 
